--- a/api/config/config.json
+++ b/api/config/config.json
@@ -1,6 +1,7 @@
 
 {
     "port": 8080,
+    "secret": "XxX_confidentialpantsu420!_XxX",
     "databases": {
         "mongo": "mongodb://localhost/cgdb",
         "mongotest": "mongodb://localhost/cgdb"
