--- a/api/package.json
+++ b/api/package.json
@@ -25,6 +25,8 @@
     "boxen": "^2.0.0",
     "express": "^4.16.4",
     "express-fileupload": "^1.0.0",
+    "jwt-simple": "^0.5.5",
+    "moment": "^2.22.2",
     "mongoose": "^5.3.14",
     "morgan": "^1.9.1",
     "multer": "^1.4.1"
