--- a/api/package.json
+++ b/api/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "boxen": "^2.0.0",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-fileupload": "^1.0.0",
     "jwt-simple": "^0.5.5",
