Added a 404 page, proper redirection after login and styling overhaul

--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "babel-polyfill": "^6.26.0",
     "vue": "^2.5.17",
     "vue-base64-upload": "^1.0.1",
+    "vue-moment": "^4.0.0",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
