--- a/package.json
+++ b/package.json
@@ -1,34 +1,36 @@
 {
-  "name": "client",
-  "version": "0.1.0",
-  "private": true,
+  "name": "classicgamesdb",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "directories": {
+    "test": "test"
+  },
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/marc0tjevp/ClassicGameDB.git"
+  },
+  "author": "Marco van Poortvliet",
+  "license": "GPL-2.0",
+  "bugs": {
+    "url": "https://github.com/marc0tjevp/ClassicGameDB/issues"
+  },
+  "homepage": "https://github.com/marc0tjevp/ClassicGameDB#readme",
   "dependencies": {
-    "axios": "^0.18.0",
-    "babel-polyfill": "^6.26.0",
-    "vue": "^2.5.17",
-    "vue-base64-upload": "^1.0.1",
-    "vue-router": "^3.0.1"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.2.0",
-    "@vue/cli-plugin-typescript": "^3.2.0",
-    "@vue/cli-service": "^3.2.0",
-    "typescript": "^3.0.0",
-    "vue-template-compiler": "^2.5.17"
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ]
+    "body-parser": "^1.18.3",
+    "boxen": "^2.0.0",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "express-fileupload": "^1.0.0",
+    "express-jwt": "^5.3.1",
+    "jwt-simple": "^0.5.5",
+    "moment": "^2.22.2",
+    "mongoose": "^5.3.14",
+    "morgan": "^1.9.1",
+    "multer": "^1.4.1"
+  }
 }
