--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "start": "node server.js"
   },
   "repository": {
@@ -21,13 +21,17 @@
   },
   "homepage": "https://github.com/marc0tjevp/ClassicGameDB#readme",
   "dependencies": {
+    "assert": "^1.4.1",
     "body-parser": "^1.18.3",
     "boxen": "^2.0.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.2.0",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-fileupload": "^1.0.0",
     "express-jwt": "^5.3.1",
     "jwt-simple": "^0.5.5",
+    "mocha": "^5.2.0",
     "moment": "^2.22.2",
     "mongoose": "^5.3.14",
     "morgan": "^1.9.1",
