--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,12 @@
   "dependencies": {
     "axios": "^0.18.1",
     "babel-polyfill": "^6.26.0",
+    "izitoast": "^1.4.0",
+    "vee-validate": "^2.2.15",
     "vue": "^2.5.17",
     "vue-base64-upload": "^1.0.1",
+    "vue-cookie": "^1.1.4",
+    "vue-izitoast": "^1.2.1",
     "vue-moment": "^4.0.0",
     "vue-router": "^3.0.1"
   },
